[package]
name = "catalyst-telegram-openai"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
async-openai-wasi = "0.16"
tg-flows = "0.3"
serde_json = "1.0"
dotenv = "0.15.0"
flowsnet-platform-sdk = "0.1"
log = "0.4"
anyhow = "1"
dapr_sdk_wasi = { git = "https://github.com/second-state/dapr-sdk-wasi" }
tokio_wasi = { version = "1.21", features = ["rt", "macros", "net", "time", "io-util"]}
